--- a/src/components/FeedNav/FeedNav.css
+++ b/src/components/FeedNav/FeedNav.css
@@ -4,7 +4,8 @@
 }
 
 @media screen and (max-width: 600px) {
-  div#page-counter {
+  div#page-counter,
+  div#buttons {
     text-align-last: center !important;
   }
 }
