--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -1,24 +1,33 @@
 #post-edit-header > * {
-  margin-right: 5px;
+  margin-left: 5px !important;
 }
 
 #post {
-  border: 0.5px solid rgba(160, 160, 160, 0.7) !important;
+  border: 0.5px solid rgba(160, 160, 160, 0.7);
   margin: 0 !important;
 }
 
+.post-hover > #post {
+  transition: all 0.4s ease;
+  -webkit-transition: all 0.4s ease;
+}
+
+.post-hover:hover > #post {
+  border-color: rgba(160, 160, 160, 1) !important;
+  background-color: rgb(39, 39, 39) !important;
+}
+
 #post > .card-content {
+  font-size: 16px;
   padding: 2%;
-  padding-top: 0% !important;
   overflow: hidden;
   white-space: pre-wrap;
 }
 
-#post > .card-action {
-  padding: 0 0 5px 10px !important;
-  font-size: 14px !important;
-  font-weight: bold;
-  border: 0;
+@media screen and (max-width: 600px) {
+  #post > .card-content {
+    font-size: 15px;
+  }
 }
 
 #post-date {
