--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -22,6 +22,7 @@
   padding: 2%;
   overflow: hidden;
   white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 @media screen and (max-width: 600px) {
